--- a/package.json
+++ b/package.json
@@ -30,13 +30,16 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^11.2.0",
+    "@angular/cdk": "^11.2.2",
     "@angular/common": "^11.2.0",
     "@angular/compiler": "^11.2.0",
     "@angular/core": "^11.2.0",
     "@angular/forms": "^11.2.0",
+    "@angular/material": "^11.2.2",
     "@angular/platform-browser": "^11.2.0",
     "@angular/platform-browser-dynamic": "^11.2.0",
     "@angular/router": "^11.2.0",
+    "@ngrx/store": "^11.0.1",
     "@nrwl/angular": "11.3.0",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
@@ -44,7 +47,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.0",
-    "@angular/cli": "~11.0.0",
+    "@angular/cli": "^11.2.2",
     "@angular/compiler-cli": "^11.2.0",
     "@angular/language-service": "^11.2.0",
     "@nrwl/cli": "11.3.0",
@@ -60,6 +63,7 @@
     "dotenv": "6.2.0",
     "jest": "26.2.2",
     "jest-preset-angular": "8.3.2",
+    "ng-packagr": "^11.0.0",
     "prettier": "2.2.1",
     "ts-jest": "26.4.0",
     "ts-node": "~9.1.1",
